fix menu on mobile

--- a/frontend/components/Header/styles.module.scss
+++ b/frontend/components/Header/styles.module.scss
@@ -16,3 +16,7 @@
     width: calc(100% - 1rem);
   }
 }
+
+.navBarButton {
+  border: none;
+}
