--- a/frontend/styles.scss
+++ b/frontend/styles.scss
@@ -25,3 +25,14 @@ a:hover {
 .navbar-light .navbar-nav .dropdown-toggle.nav-link {
   color: var(--black) !important;
 }
+
+.navbar-toggler-icon {
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='green' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
+
+.dropdown-menu {
+  // Medium devices (tablets, 768px and up)
+  @media (max-width: 768px) {
+    border: none !important;
+  }
+}
